--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,12 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "conekta/conekta-php": "dev-master",
+        "conekta/conekta-php": "^2.0",
         "laravelcollective/html": "5.3.*",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/socialite": "^2.0",
-        "cviebrock/eloquent-sluggable": "^4.0"
+        "cviebrock/eloquent-sluggable": "^4.0",
+        "dougsisk/laravel-country-state": "^1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
